--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/Self.png" alt="">
+                    <img class="img-responsive" src="img/prof.jpg" alt="">
                     <div class="intro-text">
                         <h1 class="name">Benjamin Li</h1>
                         <hr class="star-light">
@@ -103,9 +103,8 @@
             </div>
             <div class="row">
                 <div align="center">
-                    <p>I'm a San Diego native studying Electrical Engineering and Computer Science at UC Berkeley.
-                    I am interested in cybersecurity, XR, and machine learning.
-                    In my free time, I like playing video games, cooking new recipes, telling cheesy jokes, and drawing smiley faces.
+                    <p>I'm a San Diego native studying Electrical Engineering and Computer Science at UC Berkeley. <br>
+                    In my free time, I like playing video games, cooking new recipes, telling cheesy jokes, and drawing smiley faces. <br>
                     Explore this website to learn more about my work experience, my personal projects, and my skillset! :D</p>
                 </div>
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -189,12 +188,12 @@
     </section>
 
     <!-- Projects Grid Section -->
-    <section id="projects" class="success">
+    <section id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Projects</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
