New background color, resize pictures, text management, new profile picture

--- a/index.html
+++ b/index.html
@@ -102,16 +102,15 @@
                 </div>
             </div>
             <div class="row">
-                <div align="center">
-                    <p>I'm a San Diego native studying Electrical Engineering and Computer Science at UC Berkeley. <br>
-                    In my free time, I like playing video games, cooking new recipes, telling cheesy jokes, and drawing smiley faces. <br>
-                    Explore this website to learn more about my work experience, my personal projects, and my skillset! :D</p>
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <p align="center">
+                      I'm a San Diego native studying Electrical Engineering and Computer Science at UC Berkeley.
+                    In my free time, I like playing video games (my favorite is Super Smash Bros. Melee), imitating cartoon voices, telling cheesy jokes, and drawing smiley faces.
+                    Explore this website to learn more about my work experience, my personal projects, and my skillset!
+                    If you have any questions for me, my contact information is below :D </p>
                 </div>
-                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
-                </div> -->
+                <div class="col-md-4"></div>
             </div>
         </div>
     </section>
@@ -287,8 +286,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2" align="center">
                     Email: <a href="mailto:benjaminli@berkeley.edu"><font color="white">benjaminli@berkeley.edu</font></a> <br>
-                    GitHub: <a href="https://www.github.com/TheRealBenjiLi"><font color="white">/TheRealBenjiLi</font></a> <br>
-                    LinkedIn: <a href="https://www.linkedin.com/benlibenli"><font color="white">/in/benlibenli</font></a> <br>
+                    GitHub: <a href="https://www.github.com/TheRealBenjiLi"><font color="white">TheRealBenjiLi</font></a> <br>
+                    LinkedIn: <a href="https://www.linkedin.com/benlibenli"><font color="white">benlibenli</font></a> <br>
                     Phone Number: <a href="tel:858-335-9856"><font color="white">858-335-9856</font></a>
                 </div>
             </div>
