Falcomaster development blog link added

--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
                             <p>A program that, using supervised learning techniques, can mimic human habits to play Super Smash Bros. Melee.
                               This project is still in development; come check out my development blog for the project to learn more!</p>
                             <ul class="list-inline item-details">
-                                <li>Development Blog:
-                                    <strong>Coming Soon!
+                                <li>Link:
+                                    <strong><a href=http://www.falcomaster.tech>Development Blog</a>
                                     </strong>
                                 </li>
                                 <li>Status:
@@ -479,7 +479,7 @@
                                     </strong>
                                 </li>
                                 <li>Technologies Used:
-                                    <strong>Python</a>
+                                    <strong>Python, Hexo</a>
                                     </strong>
                                 </li>
                             </ul>
