Resume updated. Title updated to be more concise.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="intro-text">
                         <h1 class="name">Benjamin Li</h1>
                         <hr class="star-light">
-                        <span class="skills">Indie Game Developer and Full-Stack Software Engineer</span>
+                        <span class="skills">Software Engineer</span>
                     </div>
                 </div>
             </div>
@@ -131,12 +131,6 @@
                           </h4>
                       </div>
                   </div>
-
-                  <!-- <div class="col-md-1 col-sm-1 col-xs-1">
-                      <a href="dl/Benjamin_Li_Resume.pdf">
-                          <img class="resume-pic" alt="me" src="img/Benjamin_Li_Resume.png"></img>
-                      </a>
-                  </div> -->
               </div><!-- /row -->
           </div><!-- /container -->
       </div><!-- /#resume -->
